<resources>
    <string name="app_name">S Sadhan</string>
    <string name="english">English</string>
    <string name="hindi">हिन्दी</string>
    <string name="marathi">मराठी</string>
    <string name="text">Enter your mobile number</string>
    <string name="verifyotp">Verify OTP</string>
    <string name="time_remaining">Time remaining</string>
    <string name="enter_pin">Enter your PIN</string>
    <string name="forgot_pin">Forgot your PIN?</string>
    <string name="reset_pin">Reset now</string>
    <string name="checking_kyc">We are checking your \nKYC status</string>
    <string name="investment_oppurtunites">Meanwhile explore investment \nopportunities!</string>
    <string name="form_submission">Your form is submitted\n We will update you</string>
    <string name="collections">Explore our collections</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="stocks">Stocks</string>
    <string name="mutual_funds">Mutual funds</string>
    <string name="knowledge">Knowledge</string>
    <string name="profile">Profile</string>
    <string name="easy_secure">Easy &amp;\nSecure</string>
    <string name="policy">By signing up you are agreeing with our <font color="#0000FF">Terms of use &amp; Privacy Policy</font></string>
    <string name="price_below">Price below \n&lt;500 </string>
</resources>