<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".EnterPinFragment">
   <ImageView
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:src="@drawable/enter_m_pin_background"
       android:scaleType="fitXY"
       />
    <ImageView
        android:id="@+id/logo"
        android:layout_width="106dp"
        android:layout_height="28dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/app_logo"
        android:layout_marginStart="5dp"
        android:layout_marginTop="25dp"
        />
     <androidx.cardview.widget.CardView
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:cardCornerRadius="20dp"
    app:layout_constraintBottom_toBottomOf="parent"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:fontFamily="@font/inder"
            android:text="@string/enter_pin"
            android:textStyle="bold"
            android:textSize="24sp"
            android:layout_marginTop="20dp"
            />
        <com.chaos.view.PinView
            android:id="@+id/pinLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:itemSpacing="30dp"
            app:lineColor="@color/gray"
            android:itemBackground="@color/light_gray"
            android:focusableInTouchMode="true"
            android:inputType="number"
            android:padding="10dp"
            />
        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingVertical="10dp"
            app:layout_constraintTop_toBottomOf="@+id/pinLogin"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_pin"
                android:textSize="16sp"
                />
            <TextView
                android:id="@+id/tvForgotPin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/dark_blue"
                android:text="@string/reset_pin"
                />

        </LinearLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/button_background"
            android:fontFamily="@font/inder"
            android:paddingVertical="10dp"
            android:text="Submit"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
             />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>