<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".EnterPinFragment">
   <ImageView
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:src="@drawable/enter_m_pin_background"
       android:scaleType="fitXY"
       />
     <androidx.cardview.widget.CardView
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:cardCornerRadius="20dp"
    app:layout_constraintBottom_toBottomOf="parent"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="30dp"
        >
        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:fontFamily="@font/inder"
            android:text="@string/enter_pin"
            android:textStyle="bold"
            android:textSize="24sp"
            />
        <LinearLayout
            android:id="@+id/pinLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="40dp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:padding="5dp">

            <!-- First Digit -->
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/pinDigit1"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:layout_margin="8dp"

                android:background="@drawable/otp_background"
                android:gravity="center"
                android:inputType="numberPassword"
                android:maxLength="1"
                android:textColorHint="@color/gray"
                android:textSize="20sp"/>

            <!-- Second Digit -->
            <EditText
                android:id="@+id/pinDigit2"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:layout_margin="8dp"
                android:background="@drawable/otp_background"
                android:gravity="center"
                android:inputType="numberPassword"
                android:maxLength="1"
                android:textColorHint="@color/gray"
                android:textSize="20sp"/>

            <!-- Third Digit -->
            <EditText
                android:id="@+id/pinDigit3"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:layout_margin="8dp"
                android:background="@drawable/otp_background"
                android:gravity="center"
                android:inputType="numberPassword"
                android:maxLength="1"
                android:textColorHint="@color/gray"
                android:textSize="20sp"/>

            <!-- Fourth Digit -->
            <EditText
                android:id="@+id/pinDigit4"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:layout_margin="8dp"
                android:background="@drawable/otp_background"
                android:gravity="center"
                android:inputType="numberPassword"
                android:maxLength="1"
                android:textColorHint="@color/gray"
                android:textSize="20sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingVertical="10dp"
            app:layout_constraintTop_toBottomOf="@+id/pinLayout"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_pin"
                android:textSize="16sp"
                />
            <TextView
                android:id="@+id/timerTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/dark_blue"
                android:text="@string/reset_pin"
                />

        </LinearLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/submitBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="10dp"
            android:paddingVertical="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/cardview_background"
            android:fontFamily="@font/inder"
            android:text="Submit"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="40dp"
            />







    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>