<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LanguageActivity">

   <ImageView
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:src="@drawable/background"
       android:scaleType="centerCrop"
      />

   <ImageView
       android:layout_width="100dp"
       android:layout_height="50dp"
       app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      android:src="@drawable/app_logo"
      android:layout_marginStart="15dp"
       android:layout_marginTop="5dp"
      />

   <androidx.cardview.widget.CardView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
       app:cardCornerRadius="20dp"
      app:layout_constraintBottom_toBottomOf="parent"
      >
      <androidx.constraintlayout.widget.ConstraintLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:paddingTop="30dp"
         >
         <TextView
             android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             android:fontFamily="@font/inder"
             android:text="Select your language"
             android:textSize="24sp"
             />
         <LinearLayout

             android:id="@+id/linearLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@+id/textView"
             android:orientation="horizontal"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             >
            <androidx.cardview.widget.CardView
                android:id="@+id/englishCv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:layout_constraintEnd_toStartOf="@+id/marathiCv"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="10dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="2"

                app:cardCornerRadius="10dp"

                >
               <androidx.constraintlayout.widget.ConstraintLayout
                   android:id="@+id/englishLayout"
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:paddingVertical="10dp"
                   android:background="@drawable/cardview_background"
                   >
                  <TextView
                      android:id="@+id/englishTv"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="English"
                      android:layout_marginStart="10dp"
                      android:fontFamily="@font/inder"
                      app:layout_constraintStart_toStartOf="parent"
                      app:layout_constraintTop_toTopOf="parent"
                      android:textSize="20sp"
                      />
                  <TextView
                      android:id="@+id/englishTv2"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_marginStart="10dp"
                      app:layout_constraintTop_toBottomOf="@+id/englishTv"
                      app:layout_constraintStart_toStartOf="parent"
                      android:fontFamily="@font/inder"
                      android:text="@string/english"
                      android:textSize="18sp"
                      />
                  <ImageView
                      android:id="@+id/englishRb"
                      android:layout_width="25dp"
                      android:layout_height="25dp"
                      android:src="@drawable/checkmark"
                      android:layout_marginEnd="5dp"
                      app:layout_constraintTop_toTopOf="parent"
                      app:layout_constraintEnd_toEndOf="parent"
                      android:visibility="invisible"
                      />

               </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/marathiCv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:layout_constraintStart_toEndOf="@+id/englishCv"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="10dp"
                android:layout_weight="2"
                android:layout_marginBottom="5dp"
                app:cardCornerRadius="10dp"
                android:layout_marginHorizontal="10dp"
                android:background="@drawable/cardview_background"
                >

               <androidx.constraintlayout.widget.ConstraintLayout
                   android:id="@+id/marathiLayout"
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:background="@drawable/cardview_background"
                   android:paddingVertical="8dp">

                  <TextView
                      android:id="@+id/marathiTv"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:fontFamily="@font/inder"
                      android:text="Marathi"
                      android:layout_marginStart="10dp"
                      android:textSize="20sp"
                      app:layout_constraintStart_toStartOf="parent"
                      app:layout_constraintTop_toTopOf="parent" />

                  <TextView
                      android:id="@+id/marathiTv2"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:fontFamily="@font/monteserrat"
                      android:text="@string/marathi"
                      android:layout_marginStart="10dp"
                      android:textSize="18sp"
                      app:layout_constraintStart_toStartOf="parent"
                      app:layout_constraintTop_toBottomOf="@+id/marathiTv" />
                  <ImageView
                      android:id="@+id/marathiRb"
                      android:layout_width="25dp"
                      android:layout_height="25dp"
                      android:src="@drawable/checkmark"
                      android:visibility="invisible"
                      android:layout_marginEnd="5dp"
                      app:layout_constraintTop_toTopOf="parent"
                      app:layout_constraintEnd_toEndOf="parent"
                      />
               </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.cardview.widget.CardView>

         </LinearLayout>

         <androidx.cardview.widget.CardView
             android:id="@+id/hindiCv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@+id/linearLayout"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginEnd="20dp"
             android:layout_marginTop="15dp"
             android:layout_marginStart="18dp"
             app:cardCornerRadius="10dp"
             android:background="@drawable/cardview_background"
             >
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/hindiLayout"
                android:layout_width="180dp"
                android:layout_height="match_parent"
                android:paddingVertical="10dp"
                android:background="@drawable/cardview_background"
                >
               <TextView
                   android:id="@+id/hindiTv"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="Hindi"
                   android:layout_marginStart="10dp"
                   android:fontFamily="@font/inder"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintTop_toTopOf="parent"
                   android:textSize="20sp"
                   />
               <TextView
                   android:id="@+id/hindiTv2"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginStart="10dp"
                   app:layout_constraintTop_toBottomOf="@+id/hindiTv"
                   app:layout_constraintStart_toStartOf="parent"
                   android:text="@string/hindi"
                   android:fontFamily="@font/monteserrat"
                   android:textSize="18sp"
                   />
               <ImageView
                   android:id="@+id/hindiRb"
                   android:layout_width="25dp"
                   android:layout_height="25dp"
                   android:src="@drawable/checkmark"
                   android:layout_marginEnd="5dp"
                   app:layout_constraintTop_toTopOf="parent"
                   android:visibility="invisible"
                   app:layout_constraintEnd_toEndOf="parent"
                   />
            </androidx.constraintlayout.widget.ConstraintLayout>


         </androidx.cardview.widget.CardView>


         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/submitBtn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="20dp"
             android:layout_marginBottom="20dp"
             android:layout_marginTop="20dp"
             android:paddingVertical="10dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             android:background="@drawable/cardview_background"
             android:fontFamily="@font/inder"
             android:text="Submit"
             android:textStyle="bold"
             android:textColor="@color/white"
             android:textSize="20sp"
             app:layout_constraintTop_toBottomOf="@+id/hindiCv"
             />
      </androidx.constraintlayout.widget.ConstraintLayout>




   </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>
